[FIX] selector dark mode

--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -98,7 +98,7 @@ ul.row {
   padding: var(--section-header-padding);
 }
 
-html[data-section-theme='dark'] {
+html[data-theme='dark'] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
   background-color: var(--color-black);
